fixed bg image not showing bug

--- a/src/index.css
+++ b/src/index.css
@@ -81,12 +81,12 @@ input:-webkit-autofill:active {
   width: 100%;
   height: 100%;
   opacity: 0.05;
-  background-image: url('bg.png');
+  background-image: url('assets//bg.png');
   background-repeat: repeat;
   background-position: 50% 0;
   /* filter to make white black */
-  filter: grayscale(100%) contrast(150%) brightness(200%);
-  mix-blend-mode: difference;
+  /* filter: grayscale(100%) contrast(150%) brightness(200%); */
+  /* mix-blend-mode: difference; */
 
   z-index: -10;
 }
